[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "atomik" 
version = "0.0.1"
authors = [
  { name="halbow" },
]

description = "A small library to handle creation of file and folder in an atomic way !"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/halbow/atomik"
"Bug Tracker" = "https://github.com/halbow/atomik/issues"

#pytest