[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "atomik" 
authors = [
  { name="halbow" },
]

description = "Atomik provides you a python-friendly way to manage writing new file and folders in an atomic way."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/halbow/atomik"
"Bug Tracker" = "https://github.com/halbow/atomik/issues"

[project.optional-dependencies]
dev  = [
    "pytest",
    "mypy",
    "flake8",
    "black",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

